--- a/demo.html
+++ b/demo.html
@@ -7,32 +7,36 @@
 </head>
 <body>
 	<div id="wrapper">
-		<p>
-			select:<br/>
-			<select id="select_0">
-				<option value="value_0">value_0</option>
-				<option value="value_1">value_1</option>
-				<option value="value_2">value_2</option>
-			</select>
-		</p>
-		<p>
-			checkbox:<br/>
-			<input id="checkbox_0" name="my_checkbox" type="checkbox"/>
-			<!-- <input id="checkbox_1" name="my_checkbox" type="checkbox"/> -->
-		</p>
-		<p id="radioGroupP">
-			radio group:<br/>
-			<input id="radio_0" type="radio" name="my_radio" value="value_0">
-			<input id="radio_1" type="radio" name="my_radio" value="value_1">
-		</p>
-		<p>
-			other type input:<br/>
-			<input id="input_0" name="my_input" />
-		</p>
-		<p>
-			textarea:<br/>
-			<textarea id="textarea_0" name="my_textarea"></textarea>
-		</p>
+		<div id="area1">
+			<p>
+				select:<br/>
+				<select id="select_0">
+					<option value="value_0">value_0</option>
+					<option value="value_1">value_1</option>
+					<option value="value_2">value_2</option>
+				</select>
+			</p>
+			<p>
+				checkbox:<br/>
+				<input id="checkbox_0" name="my_checkbox" type="checkbox"/>
+				<!-- <input id="checkbox_1" name="my_checkbox" type="checkbox"/> -->
+			</p>
+		</div>
+		<div id="area2">
+			<p id="radioGroupP">
+				radio group:<br/>
+				<input id="radio_0" type="radio" name="my_radio" value="value_0">
+				<input id="radio_1" type="radio" name="my_radio" value="value_1">
+			</p>
+			<p>
+				other type input:<br/>
+				<input id="input_0" name="my_input" />
+			</p>
+			<p>
+				textarea:<br/>
+				<textarea id="textarea_0" name="my_textarea"></textarea>
+			</p>
+		</div>
 	</div>
 	<script src="remember.js"></script>
 	<script>
@@ -44,8 +48,9 @@
 		// 	}
 		// 	// ,ignoreIds:['checkbox_0']
 		// })
-		var myRemember1 = remember('checkbox_0')
-		var myRemember2 = remember('radioGroupP') // radio需要绑定到外层上
+		// var myRemember1 = remember('checkbox_0')
+		// var myRemember2 = remember('radioGroupP') // radio需要绑定到外层上
+		remember()
 	</script>
 </body>
 </html>
